creating /player/leaderboard api
