# src/main/java/vinicius/cornieri/lets/code/challenge/rest/controller/GameController.java
@@ -3,11 +3,8 @@ package vinicius.cornieri.lets.code.challenge.rest.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RestController;
-import vinicius.cornieri.lets.code.challenge.domain.model.Player;
 import vinicius.cornieri.lets.code.challenge.domain.service.GameService;
-import vinicius.cornieri.lets.code.challenge.domain.service.PlayerService;
 import vinicius.cornieri.lets.code.challenge.generated.api.GameApi;
 import vinicius.cornieri.lets.code.challenge.generated.domain.view.CurrentGameResponseDto;
 import vinicius.cornieri.lets.code.challenge.generated.domain.view.GameChooseRequestDto;
